This is my third edit

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 			<section id="header" class="dark">
 				<header>
 					<h1>Maturi Manvitha</h1>
-					<p>hello  <a href="http://html5up.net">HTML5 UP</a></p>
+					<p6>Enthusiastic Computer Science student eager to explore and innovate in technology. </p6> <!-- <a href="http://html5up.net">HTML5 UP</a> i fu want a link in that link like initially -->
 				</header>
 				<footer>
-					<a href="#first" class="button scrolly">Proceed to second phase</a>
+					<a href="#first" class="button scrolly">Curious? Dive deeper into my journey here!</a>
 				</footer>
 			</section>
 
@@ -28,9 +28,8 @@
 			<section id="first" class="main">
 				<header>
 					<div class="container">
-						<h2>Tessellate is a free responsive site template</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>My story </h2>
+						<p>Ever since I was young, I've been curious about how things work, especially in the world of technology. Growing up, I loved taking things apart and putting them back together, always eager to understand the mechanics behind them. This curiosity naturally led me to Computer Science, where I discovered a passion for creating and innovating</p>
 					</div>
 				</header>
 				<div class="content dark style1 featured">
@@ -38,44 +37,43 @@
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon fa-clock"></span></span>
+									<!--<span class="feature-icon"><span class="icon fa-clock"></span></span> -->
 									<header>
-										<h3>Gravida</h3>
+										<h3>Experience</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>Contributed to refining AI software at TELUS International by providing human insights, enhancing the quality of search results in the year 2020 to 2021.
+									Soon, I'm going to take up the role of SRS leader at learnig commons @UC.
+									</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>
+									<!--<span class="feature-icon"><span class="icon solid fa-bolt"></span></span>  -->
 									<header>
-										<h3>Vivamus</h3>
+										<h3>Skills</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>I am proficient in Python, C, C++, LabVIEW, HTML, CSS, and JavaScript, with experience in web development and VBA.
+										 My fluency in Hindi, Telugu, and English enhances my ability to communicate and collaborate effectively in diverse
+										 environments.</p>
 								</section>
 							</div>
 							<div class="col-4 col-12-narrow">
 								<section>
-									<span class="feature-icon"><span class="icon solid fa-cloud"></span></span>
+									<!-- <span class="feature-icon"><span class="icon solid fa-cloud"></span></span> -->
 									<header>
-										<h3>Accumsan</h3>
+										<h3>Awards</h3>
 									</header>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales.
-									Diam tempor dui lacinia accumsan vivamus. Gravida dis placerat lectus
-									ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus.</p>
+									<p>I have been recognized with the International Outreach Award and Global Outreach Scholarship at the University of Cincinnati,
+										 supporting my academic pursuits for up to eight semesters. Additionally, my consistent academic excellence has earned me a
+										  place on the Dean's List at the university.</p>
 								</section>
 							</div>
+							
 							<div class="col-12">
-								<footer>
+								<!--<footer>
 									<a href="#second" class="button scrolly">Gravida tempor lacinia</a>
 								</footer>
+							-->
 							</div>
 						</div>
 					</div>
@@ -84,29 +82,22 @@
 
 		<!-- Second -->
 			<section id="second" class="main">
-				<header>
+				<!--<header>
 					<div class="container">
 						<h2>Euismod sed feugiat lorem tempus magna</h2>
 						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
 						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
 					</div>
-				</header>
+				</header> -->
 				<div class="content dark style2">
 					<div class="container">
 						<div class="row">
 							<div class="col-4 col-12-narrow">
 								<section>
-									<h3>Augue vivamus sed ipsum commodo lorem dolor</h3>
-									<p>Gravida dis placerat lectus ante vel nunc euismod est turpis sodales. Diam
-									tempor dui lacinia eget ornare varius gravida. Gravida dis placerat lectus ante
-									vel nunc euismod est turpis sodales. Diam tempor dui lacinia accumsan vivamus
-									augue cubilia vivamus nisi eu eget ornare varius gravida euismod.  Gravida dis
-									lorem ipsum dolor placerat magna tempus feugiat.</p>
-									<p>Lectus ante vel nunc euismod est turpis sodales. Diam tempor dui lacinia
-									accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida dolore
-									euismod lorem ipsum dolor.</p>
+									<h3>Looking Ahead: My Journey to a Spring 2025 Co-op</h3>
+									<p>I'm thoroughly enjoying my time at the University of Cincinnati, where I've developed a strong foundation in Computer Science and engaged in various academic and extracurricular activities. Now, I'm eagerly looking forward to the next step in my journey: a co-op opportunity in Spring 2025. This experience will allow me to apply what I've learned, gain valuable industry experience, and continue growing both professionally and personally.</p>
 									<footer>
-										<a href="#third" class="button scrolly">Accumsan nisi tempor</a>
+										<a href="https://acrobat.adobe.com/id/urn:aaid:sc:AP:9c4e5630-03be-429d-abe8-a48a553cc7a5" class="button scrolly">Resume</a>
 									</footer>
 								</section>
 							</div>
@@ -116,8 +107,8 @@
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a></div>
 									<div class="col-6"><a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
-									<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div>
+									<!-- <div class="col-6"><a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a></div>
+									<div class="col-6"><a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a></div> -->
 								</div>
 							</div>
 						</div>
@@ -129,12 +120,11 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container">
-						<h2>Ornare varius lorem ipsum ante lectus</h2>
-						<p>Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet consequat<br />
-						feugiat. Gravida dis placerat lectus ante vel nunc euismod eget ornare varius gravida euismod lorem ipsum dolor sit amet.</p>
+						<h2>Let's Connect</h2>
+						<p>I’d love to hear from you! Whether you have questions, opportunities, or just want to connect, feel free to reach out. You can contact me via email at <a href="mailto:maturila@mail.uc.edu"> maturila@mail.uc.edu</a>, or connect with me on  <a href="https://www.linkedin.com/in/maturi-manvitha/">LinkedIn</a>. I'm always open to new connections and conversations!</p>
 					</div>
 				</header>
-				<div class="content dark style3">
+				<!-- <div class="content dark style3">
 					<div class="container">
 						<span class="image featured"><img src="images/pic07.jpg" alt="" /></span>
 						<div class="row">
@@ -173,10 +163,10 @@
 								est turpis sodales. Diam tempor dui lacinia dolore.</p>
 								<p>Accumsan vivamus augue cubilia vivamus nisi eu eget ornare varius gravida
 								dolore euismod lorem ipsum dolor sit amet conseismod lorem ipsum dolor sit amet
-								consequat lorem ipsum consequat feugiat sed tempus euismod feugiat veroeros.</p>
+								consequat lorem ipsum consequat feugiat sed tempus euismod feugiat veroeros.</p> 
 								<footer>
 									<a href="#fourth" class="button scrolly">Ipsum ornare lorem dolor</a>
-								</footer>
+								</footer> -->
 							</div>
 						</div>
 					</div>
@@ -347,7 +337,7 @@
 			</section>
 		-->
 
-		<!-- Fourth -->
+		<!-- Fourth 
 			<section id="fourth" class="main">
 				<header>
 					<div class="container">
@@ -374,8 +364,8 @@
 					</div>
 				</div>
 			</section>
-
-		<!-- Footer -->
+		-->
+		<!-- Footer 
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -390,7 +380,7 @@
 					</ul>
 				</div>
 			</section>
-
+        -->
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
